test/with7.slq

def main(){
	with{
		return 2; // error
	}do{ }
	return 0;
}
